feat: Added Favicons + Socials

--- a/index.html
+++ b/index.html
@@ -1,14 +1,48 @@
 <!DOCTYPE html>
 <html lang="en" class="theme-color-07cb79 theme-skin-light">
 <head>
+    <title>FRANCK DEMOUTE | Développeur Full-Stack sur La Rochelle</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <title>RScard</title>
+	<meta name="description" content="Développeur Full-Stack sur La Rochelle. Spécialiste Javascript Back/Front. HTML5 / CSS3 / ES2020 / NodeJS / Java">
+	<meta name="author" content="Franck Demoute">
+    
+	<link rel="canonical" href="https://franckdemoute.fr">
 
     <!-- Favicon -->
-    <link rel="shortcut icon" type="image/ico" href="img/favicon.png"/>
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png?v=2bAWmJbzJl">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png?v=2bAWmJbzJl">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png?v=2bAWmJbzJl">
+    <link rel="manifest" href="/site.webmanifest?v=2bAWmJbzJl">
+    <link rel="mask-icon" href="/safari-pinned-tab.svg?v=2bAWmJbzJl" color="#5bbad5">
+    <link rel="shortcut icon" href="/favicon.ico?v=2bAWmJbzJl">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
+
+    <!-- Socials -->
+	<meta property="og:title" content="FRANCK DEMOUTE | Développeur Full-Stack sur La Rochelle">
+	<meta property="og:site_name" content="FRANCK DEMOUTE | Développeur Full-Stack sur La Rochelle">
+	<meta property="og:url" content="https://franckdemoute.fr">
+	<meta property="og:description" content="Développeur Full-Stack sur La Rochelle. Spécialiste Javascript Back/Front. HTML5/CSS3/ES2020/NodeJS/Java">
+	<meta property="og:type" content="website">
+	<meta property="og:image" content="https://franckdemoute.fr/images/preview.jpg">
+
+	<meta name="twitter:card" content="summary" />
+	<meta name="twitter:site" content="@Zenoo0" />
+	<meta name="twitter:title" content="FRANCK DEMOUTE | Développeur Full-Stack sur La Rochelle" />
+	<meta name="twitter:description" content="Développeur Full-Stack sur La Rochelle. Spécialiste Javascript Back/Front. HTML5/CSS3/ES2020/NodeJS/Java" />
+    <meta name="twitter:image" content="https://franckdemoute.fr/images/preview.jpg" />
+    
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-107380958-1"></script>
+	<script>
+	window.dataLayer = window.dataLayer || [];
+	function gtag(){dataLayer.push(arguments);}
+	gtag('js', new Date());
+
+	gtag('config', 'UA-107380958-1');
+	</script>
 
     <!-- Google Fonts -->
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Fredoka+One">
