fix: Cleanup JS + Colors & BG change

--- a/category.html
+++ b/category.html
@@ -79,7 +79,7 @@
         <div class="widget-area">
             <aside class="widget widget-profile animate-up">
                 <div class="profile-photo">
-                    <img src="img/uploads/rs-photo-v2.jpg" alt="Robert Smith"/>
+                    <img src="img/uploads/logo-zenoo-wide.png" alt="Robert Smith"/>
                 </div>
                 <div class="profile-info">
                     <h2 class="profile-title">Robert Smith</h2>
