fix: Cleanup unused images

--- a/index.html
+++ b/index.html
@@ -704,47 +704,34 @@
 
             <div class="clients-carousel">
               <div class="client-logo">
-                <a href="http://market.envato.com" target="_blank"><img src="img/uploads/logos/logo-envato.png"
-                    title="envato" alt="envato" /></a>
+                <img src="img/uploads/logos/AngularJS.png" title="AngularJS" alt="AngularJS" />
               </div>
-
               <div class="client-logo">
-                <img src="img/uploads/logos/logo-angularjs.png" title="angular js" alt="angular js" />
+                <img src="img/uploads/logos/CSS3.png" title="CSS3" alt="CSS3" />
               </div>
-
               <div class="client-logo">
-                <a href="https://www.omniref.com/ruby/gems/teaspoon/0.7.9" target="_blank"><img
-                    src="img/uploads/logos/logo-teaspoon.png" title="teaspoon" alt="teaspoon" /></a>
+                <img src="img/uploads/logos/HTML5.png" title="HTML5" alt="HTML5" />
               </div>
-
               <div class="client-logo">
-                <a href="https://wordpress.com" target="_blank"><img src="img/uploads/logos/logo-wordpress.png"
-                    title="wordpress" alt="wordpress" /></a>
+                <img src="img/uploads/logos/Javascript.png" title="Javascript" alt="Javascript" />
               </div>
-
               <div class="client-logo">
-                <a href="https://evernote.com" target="_blank"><img src="img/uploads/logos/logo-evernote.png"
-                    title="evernote" alt="evernote" /></a>
+                <img src="img/uploads/logos/Java.png" title="Java" alt="Java" />
               </div>
-
               <div class="client-logo">
-                <a href="http://compass-style.org" target="_blank"><img src="img/uploads/logos/logo-compass.png"
-                    title="compass" alt="compass" /></a>
+                <img src="img/uploads/logos/jQuery.png" title="jQuery" alt="jQuery" />
               </div>
-
               <div class="client-logo">
-                <a href="http://getbootstrap.com" target="_blank"><img src="img/uploads/logos/logo-bootstrap.png"
-                    title="bootstrap" alt="bootstrap" /></a>
+                <img src="img/uploads/logos/NodeJS.png" title="NodeJS" alt="NodeJS" />
               </div>
-
               <div class="client-logo">
-                <a href="http://jasmine.github.io" target="_blank"><img src="img/uploads/logos/logo-jasmine.png"
-                    title="jasmine" alt="jasmine" /></a>
+                <img src="img/uploads/logos/Prestashop.png" title="Prestashop" alt="Prestashop" />
               </div>
-
               <div class="client-logo">
-                <a href="https://jquery.com" target="_blank"><img src="img/uploads/logos/logo-jquery.png" title="jquery"
-                    alt="jquery" /></a>
+                <img src="img/uploads/logos/Scala.png" title="Scala" alt="Scala" />
+              </div>
+              <div class="client-logo">
+                <img src="img/uploads/logos/Wordpress.png" title="Wordpress" alt="Wordpress" />
               </div>
             </div>
           </div>
@@ -753,81 +740,29 @@
 
         <section id="text-section" class="section section-text">
           <div class="animate-up animated">
-            <h2 class="section-title">Text Section</h2>
+            <h2 class="section-title">Bio</h2>
 
             <div class="section-box">
-              <p>Hello! I’m Robert Smith and this is custom editor section. You can add here any text or "Strikethrough"
-                text and even you can add bulleted or numbered text and even you will be able to add blockquot text. You
-                can align this text to left/right/center.
-
-                One of the most interesting options is to divide this section to "One half" "One Third" and "One
-                Fourth".
-
-                You can use this for Honors or Achievments or Awards sections. You can insert images and photos right in
-                this editor!</p>
+              <p>Je m'appelle Franck Demoute. Je suis un développeur Full-Stack de 25 ans. J'ai commencé à coder dès l'âge de 12 ans, en me formant seul avec un livre sur le XHTML. En y repensant, c'était très archaïque, mais ça m'a introduit au monde du développement. Je suis très vite passé sur du HTML/CSS, qui me permettait de créer tout ce que je pouvais imaginer. Mais ça ne suffisait pas, j'avais toujours envie d'en apprendre plus, je me suis donc dirigé vers le Javascript et j'ai trouvé mon bonheur. Je n'ai pas arrêté de coder depuis ce jour.</p>
+              <p>Tout au long de mon éducation, j'ai continué à intégrer des petits projets Javascript partout où je pouvais. Quelque chose me gêne sur un site en particulier? Pas de problème, un userscript me permet d'adapter ce site à mes préférences. Au fur et à mesure, les projets ont commencé à prendre de l'ampleur, et mes premières bibliothèques Javascript ont vu le jour. Lorsque j'ai commencé à chercher un endroit pour les publier, je suis tombé dans le monde de l'Open Source avec Github & Stackoverflow. Depuis, j'essaie de participer à la communauté Open Source dès que j'en ai la possibilité, en répondant à des questions sur Stackoverflow et en maintenant mes projets sur Github. Aider des personnes à résoudre leur problèmes de code et apprendre des notions de codages à d'autres est quelque chose qui m'a toujours fait plaisir.</p>
+              <p>J'aime développer dans le calme, en écoutant de la musique, ça m'aide à me concentrer sur la tâche en cours. Je rassemble d'ailleurs les musiques que j'utilise pour coder dans cette <a href="https://open.spotify.com/user/zenoo0/playlist/4DL9EGxzyd3S14XWnX8fQp?si=s37Vnf3uRZ-tSl9JA7pzeA" target="_blank">playlist</a>.</p>
             </div>
           </div>
         </section>
         <!-- #text-section -->
 
-        <section id="interests" class="section section-interests">
-          <div class="animate-up">
-            <h2 class="section-title">My Interests</h2>
-
-            <div class="section-box">
-              <p>I have a keen interest in photography. I was vice-president of the photography club during my time at
-                university,
-                and during this period I organised a number of very successful exhibitions and events both on and off
-                campus.
-                <br />I also play the piano to grade 8 standard.</p>
-
-              <ul class="interests-list">
-                <li>
-                  <i class="map-icon map-icon-bicycling"></i>
-                  <span>Bicycling</span>
-                </li>
-                <li>
-                  <i class="map-icon map-icon-movie-theater"></i>
-                  <span>Watch Movies</span>
-                </li>
-                <li>
-                  <i class="map-icon map-icon-ice-skating"></i>
-                  <span>Skating</span>
-                </li>
-                <li>
-                  <i class="map-icon map-icon-shopping-mall"></i>
-                  <span>Shopping</span>
-                </li>
-                <li>
-                  <i class="map-icon map-icon-tennis"></i>
-                  <span>Playing Tennis</span>
-                </li>
-                <li>
-                  <i class="map-icon map-icon-bowling-alley"></i>
-                  <span>Playing Bowling</span>
-                </li>
-                <li>
-                  <i class="map-icon map-icon-swimming"></i>
-                  <span>Swimming</span>
-                </li>
-              </ul>
-            </div>
-          </div>
-        </section>
-        <!-- #interests -->
-
         <section id="contact" class="section section-contact">
           <div class="animate-up">
-            <h2 class="section-title">Contact Me</h2>
+            <h2 class="section-title">Contact</h2>
 
             <div class="row">
               <div class="col-sm-6">
                 <div class="section-box contact-form">
-                  <h3>Feel free to contact me</h3>
+                  <h3>Laissez moi un message</h3>
 
                   <form class="rsForm" action="recaptcha.php" method="post" data-captcha="true">
                     <div class="input-field">
-                      <label>Name</label>
+                      <label>Nom</label>
                       <input type="text" name="rsName" value="">
                       <span class="line"></span>
                     </div>
@@ -839,7 +774,7 @@
                     </div>
 
                     <div class="input-field">
-                      <label>Subject</label>
+                      <label>Sujet</label>
                       <input type="text" name="rsSubject" value="">
                       <span class="line"></span>
                     </div>
@@ -850,13 +785,8 @@
                       <span class="line"></span>
                     </div>
 
-                    <div class="check-field">
-                      <input type="checkbox" name="rsPivacyPolicy" id="rsPivacyPolicy">
-                      <label for="rsPivacyPolicy">I have read the Privacy Policy note.</label>
-                    </div>
-
                     <span class="btn-outer btn-primary-outer ripple">
-                      <input class="rsFormSubmit btn btn-lg btn-primary" type="submit" value="Send">
+                      <input class="rsFormSubmit btn btn-lg btn-primary" type="submit" value="Envoyer">
                     </span>
                   </form>
                 </div>
@@ -866,20 +796,20 @@
                 <div class="section-box contact-info has-map">
                   <ul class="contact-list">
                     <li class="clearfix">
-                      <strong>Address</strong>
-                      <span>Belgium, Brussels, Liutte 27, BE</span>
+                      <strong>Ville</strong>
+                      <span>17000, La Rochelle, FR</span>
                     </li>
                     <li class="clearfix">
-                      <strong>phone</strong>
-                      <span><a href="tel:+12562548456">+1 256 254 84 56</a></span>
+                      <strong>Téléphone</strong>
+                      <span><a href="tel:+0672352177">06 72 35 21 77</a></span>
                     </li>
                     <li class="clearfix">
                       <strong>E-mail</strong>
-                      <span><a href="mailto:robertsmith@company.com">robertsmith@company.com</a></span>
+                      <span><a href="mailto:pro@franckdemoute.fr">pro@franckdemoute.fr</a></span>
                     </li>
                   </ul>
 
-                  <div id="map" data-latitude="50.84592" data-longitude="4.366859999999974"></div>
+                  <div id="map" data-latitude="46.149276" data-longitude="-1.155681"></div>
                 </div>
               </div>
             </div>
@@ -917,7 +847,7 @@
 
   <!-- Scripts -->
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1/jquery.js"></script>
-  <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js"></script>
+  <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCnGaWqD_3GJmIj-r1DYeneHDefa-S5NqU"></script>
   <script type="text/javascript" src="fonts/map-icons/js/map-icons.min.js"></script>
   <script type="text/javascript" src="js/plugins/jquery.mousewheel-3.0.6.pack.js"></script>
   <script type="text/javascript" src="js/plugins/imagesloaded.pkgd.min.js"></script>
