fix: Added Webp sources + compressed images

--- a/index.html
+++ b/index.html
@@ -99,7 +99,11 @@
     <div class="widget-area">
       <aside class="widget widget-profile">
         <div class="profile-photo">
-          <img src="img/uploads/logo-zenoo-wide.png" alt="Franck Demoute" />
+          <picture>
+            <source srcset="img_webp/uploads/logo-zenoo-wide.webp" type="image/webp">
+            <source srcset="img/uploads/logo-zenoo-wide.png" type="image/png">
+              <img src="img/uploads/logo-zenoo-wide.png" alt="Franck Demoute" />
+          </picture>
         </div>
         <div class="profile-info">
           <h2 class="profile-title">Franck Demoute</h2>
