fix: Use <picture> tags

--- a/index.html
+++ b/index.html
@@ -160,7 +160,13 @@
         <div class="head-bar-inner">
           <div class="row">
             <div class="col-sm-3 col-xs-6">
-              <a class="head-logo" href=""><img src="img/rs-logo.png" alt="RScard" /></a>
+              <a class="head-logo" href="">
+                <picture>
+                  <source srcset="img_webp/rs-logo.webp" type="image/webp">
+                  <source srcset="img/rs-logo.png" type="image/png">
+                    <img src="img/rs-logo.png" alt="Franck Demoute" />
+                </picture>
+              </a>
             </div>
 
             <div class="col-sm-9 col-xs-6">
@@ -196,7 +202,13 @@
               <div class="profile">
                 <div class="row">
                   <div class="col-xs-5">
-                    <div class="profile-photo"><img src="img/uploads/logo-zenoo-tall.png" alt="Robert Smith" /></div>
+                    <div class="profile-photo">
+                      <picture>
+                        <source srcset="img_webp/uploads/logo-zenoo-tall.webp" type="image/webp">
+                        <source srcset="img/uploads/logo-zenoo-tall.png" type="image/png">
+                        <img src="img/uploads/logo-zenoo-tall.png" alt="Franck Demoute" />
+                      </picture>
+                    </div>
                   </div>
                   <div class="col-xs-7">
                     <div class="profile-info">
@@ -351,7 +363,11 @@
               <div class="grid-item size22 site">
                 <div class="grid-box">
                   <figure class="portfolio-figure">
-                    <img src="img/uploads/portfolio/obcom-thumbnail.jpg" alt="Obcom" />
+                    <picture>
+                      <source srcset="img_webp/uploads/portfolio/obcom-thumbnail.webp" type="image/webp">
+                      <source srcset="img/uploads/portfolio/obcom-thumbnail.jpg" type="image/jpeg">
+                      <img src="img/uploads/portfolio/obcom-thumbnail.jpg" alt="Obcom" />
+                    </picture>
                     <figcaption class="portfolio-caption">
                       <div class="portfolio-caption-inner">
                         <h3 class="portfolio-title">Obcom.fr</h3>
@@ -389,7 +405,11 @@
               <div class="grid-item size11 site">
                 <div class="grid-box">
                   <figure class="portfolio-figure">
-                    <img src="img/uploads/portfolio/sostag-thumbnail.jpg" alt="Sostag" />
+                    <picture>
+                      <source srcset="img_webp/uploads/portfolio/sostag-thumbnail.webp" type="image/webp">
+                      <source srcset="img/uploads/portfolio/sostag-thumbnail.jpg" type="image/jpeg">
+                        <img src="img/uploads/portfolio/sostag-thumbnail.jpg" alt="Sostag" />
+                    </picture>
                     <figcaption class="portfolio-caption">
                       <div class="portfolio-caption-inner">
                         <h3 class="portfolio-title">Sostag</h3>
@@ -426,7 +446,11 @@
               <div class="grid-item size11 nature site">
                 <div class="grid-box">
                   <figure class="portfolio-figure">
-                    <img src="img/uploads/portfolio/clos-normand-thumbnail.jpg" alt="Clos Normand" />
+                    <picture>
+                      <source srcset="img_webp/uploads/portfolio/clos-normand-thumbnail.webp" type="image/webp">
+                      <source srcset="img/uploads/portfolio/clos-normand-thumbnail.jpg" type="image/jpeg">
+                      <img src="img/uploads/portfolio/clos-normand-thumbnail.jpg" alt="Clos Normand" />
+                    </picture>
                     <figcaption class="portfolio-caption">
                       <div class="portfolio-caption-inner">
                         <h3 class="portfolio-title">Clos-Normand.com</h3>
@@ -621,34 +645,74 @@
 
             <div class="clients-carousel">
               <div class="client-logo">
-                <img src="img/uploads/logos/AngularJS.png" title="AngularJS" alt="AngularJS" />
+                <picture>
+                  <source srcset="img_webp/uploads/logos/AngularJS.webp" type="image/webp">
+                  <source srcset="img/uploads/logos/AngularJS.png" type="image/png">
+                  <img src="img/uploads/logos/AngularJS.png" title="AngularJS" alt="AngularJS" />
+                </picture>
               </div>
               <div class="client-logo">
-                <img src="img/uploads/logos/CSS3.png" title="CSS3" alt="CSS3" />
+                <picture>
+                  <source srcset="img_webp/uploads/logos/CSS3.webp" type="image/webp">
+                  <source srcset="img/uploads/logos/CSS3.png" type="image/png">
+                  <img src="img/uploads/logos/CSS3.png" title="CSS3" alt="CSS3" />
+                </picture>
               </div>
               <div class="client-logo">
-                <img src="img/uploads/logos/HTML5.png" title="HTML5" alt="HTML5" />
+                <picture>
+                  <source srcset="img_webp/uploads/logos/HTML5.webp" type="image/webp">
+                  <source srcset="img/uploads/logos/HTML5.png" type="image/png">
+                  <img src="img/uploads/logos/HTML5.png" title="HTML5" alt="HTML5" />
+                </picture>
               </div>
               <div class="client-logo">
-                <img src="img/uploads/logos/Javascript.png" title="Javascript" alt="Javascript" />
+                <picture>
+                  <source srcset="img_webp/uploads/logos/Javascript.webp" type="image/webp">
+                  <source srcset="img/uploads/logos/Javascript.png" type="image/png">
+                  <img src="img/uploads/logos/Javascript.png" title="Javascript" alt="Javascript" />
+                </picture>
               </div>
               <div class="client-logo">
-                <img src="img/uploads/logos/Java.png" title="Java" alt="Java" />
+                <picture>
+                  <source srcset="img_webp/uploads/logos/Java.webp" type="image/webp">
+                  <source srcset="img/uploads/logos/Java.png" type="image/png">
+                  <img src="img/uploads/logos/Java.png" title="Java" alt="Java" />
+                </picture>
               </div>
               <div class="client-logo">
-                <img src="img/uploads/logos/jQuery.png" title="jQuery" alt="jQuery" />
+                <picture>
+                  <source srcset="img_webp/uploads/logos/jQuery.webp" type="image/webp">
+                  <source srcset="img/uploads/logos/jQuery.png" type="image/png">
+                  <img src="img/uploads/logos/jQuery.png" title="jQuery" alt="jQuery" />
+                </picture>
               </div>
               <div class="client-logo">
-                <img src="img/uploads/logos/NodeJS.png" title="NodeJS" alt="NodeJS" />
+                <picture>
+                  <source srcset="img_webp/uploads/logos/NodeJS.webp" type="image/webp">
+                  <source srcset="img/uploads/logos/NodeJS.png" type="image/png">
+                  <img src="img/uploads/logos/NodeJS.png" title="NodeJS" alt="NodeJS" />
+                </picture>
               </div>
               <div class="client-logo">
-                <img src="img/uploads/logos/Prestashop.png" title="Prestashop" alt="Prestashop" />
+                <picture>
+                  <source srcset="img_webp/uploads/logos/Prestashop.webp" type="image/webp">
+                  <source srcset="img/uploads/logos/Prestashop.png" type="image/png">
+                  <img src="img/uploads/logos/Prestashop.png" title="Prestashop" alt="Prestashop" />
+                </picture>
               </div>
               <div class="client-logo">
-                <img src="img/uploads/logos/Scala.png" title="Scala" alt="Scala" />
+                <picture>
+                  <source srcset="img_webp/uploads/logos/Scala.webp" type="image/webp">
+                  <source srcset="img/uploads/logos/Scala.png" type="image/png">
+                  <img src="img/uploads/logos/Scala.png" title="Scala" alt="Scala" />
+                </picture>
               </div>
               <div class="client-logo">
-                <img src="img/uploads/logos/Wordpress.png" title="Wordpress" alt="Wordpress" />
+                <picture>
+                  <source srcset="img_webp/uploads/logos/Wordpress.webp" type="image/webp">
+                  <source srcset="img/uploads/logos/Wordpress.png" type="image/png">
+                  <img src="img/uploads/logos/Wordpress.png" title="Wordpress" alt="Wordpress" />
+                </picture>
               </div>
             </div>
           </div>
