--- a/index.html
+++ b/index.html
@@ -56,11 +56,18 @@
   <link rel="stylesheet" type="text/css" href="fonts/icomoon/style.css">
 
   <!-- Styles -->
-  <link rel="stylesheet" type="text/css" href="js/plugins/jquery.bxslider/jquery.bxslider.css">
-  <link rel="stylesheet" type="text/css" href="js/plugins/jquery.customscroll/jquery.mCustomScrollbar.min.css">
-  <link rel="stylesheet" type="text/css" href="js/plugins/jquery.fancybox/jquery.fancybox.css">
-  <link rel="stylesheet" type="text/css" href="js/plugins/jquery.owlcarousel/owl.carousel.css">
-  <link rel="stylesheet" type="text/css" href="js/plugins/jquery.owlcarousel/owl.theme.css">
+  <link rel="stylesheet" href="js/plugins/jquery.bxslider/jquery.bxslider.css" media="none" onload="if(media!='all')media='all'">
+  <noscript><link rel="stylesheet" href="js/plugins/jquery.bxslider/jquery.bxslider.css"></noscript>
+  <link rel="stylesheet" href="js/plugins/jquery.customscroll/jquery.mCustomScrollbar.min.css" media="none" onload="if(media!='all')media='all'">
+  <noscript><link rel="stylesheet" href="js/plugins/jquery.customscroll/jquery.mCustomScrollbar.min.css"></noscript>
+  <link rel="stylesheet" href="js/plugins/jquery.fancybox/jquery.fancybox.css" media="none" onload="if(media!='all')media='all'">
+  <noscript><link rel="stylesheet" href="js/plugins/jquery.fancybox/jquery.fancybox.css"></noscript>
+  <link rel="stylesheet" href="js/plugins/jquery.owlcarousel/owl.carousel.css" media="none" onload="if(media!='all')media='all'">
+  <noscript><link rel="stylesheet" href="js/plugins/jquery.owlcarousel/owl.carousel.css"></noscript>
+  <link rel="stylesheet" href="js/plugins/jquery.owlcarousel/owl.theme.css" media="none" onload="if(media!='all')media='all'">
+  <noscript><link rel="stylesheet" href="js/plugins/jquery.owlcarousel/owl.theme.css"></noscript>
+
+  <!-- Critical styles -->
   <link rel="stylesheet" type="text/css" href="style.css">
   <link rel="stylesheet" type="text/css" href="colors/blue.css">
 
@@ -212,6 +219,30 @@
                   </div>
                   <div class="col-xs-7">
                     <div class="profile-info">
+											<script type="application/ld+json">
+                        {
+                        "@context": "https://schema.org",
+                        "@type": "Person",
+                        "address": {
+                          "@type": "PostalAddress",
+                          "addressLocality": "La Rochelle",
+                          "postalCode": "17000"
+                        },
+                        "email": "pro@franckdemoute.fr",
+                        "image": "img/uploads/logo-zenoo-tall.png",
+                        "jobTitle": "Full-Stack Developer",
+                        "name": "Franck Demoute",
+                        "alumniOf": "La Rochelle University",
+                        "birthPlace": "Verdun",
+                        "birthDate": "1995.03.13",
+                        "height": "171 cm",
+                        "gender": "male",
+                        "memberOf": "Sostag",
+                        "nationality": "French",
+                        "telephone": "06 72 35 21 77",
+                        "url": "https://franckdemoute.fr"
+                        }
+                      </script>
                       <div class="profile-preword"><span>Hey</span></div>
                       <h1 class="profile-title"><span>Franck</span> Demoute</h1>
 
