--- a/index.html
+++ b/index.html
@@ -49,8 +49,7 @@
   </script>
 
   <!-- Google Fonts -->
-  <link rel="stylesheet" type="text/css"
-    href="https://fonts.googleapis.com/css?family=Open+Sans:300,300italic,400,400italic,600,600italic,700,700italic,800,800italic">
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap" rel="stylesheet">
 
   <!-- Icon Fonts -->
   <link rel="stylesheet" type="text/css" href="fonts/icomoon/style.css">
