--- a/index.html
+++ b/index.html
@@ -836,7 +836,12 @@
                     </li>
                   </ul>
 
-                  <div id="map" data-latitude="46.149276" data-longitude="-1.155681"></div>
+                  <div id="map" data-latitude="46.149276" data-longitude="-1.155681">
+                    <iframe
+                      frameborder="0" style="border:0"
+                      src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCnGaWqD_3GJmIj-r1DYeneHDefa-S5NqU&q=la+rochelle&center=46.149276,-1.155681&zoom=6">
+                    </iframe>
+                  </div>
                 </div>
               </div>
             </div>
@@ -877,8 +882,6 @@
 
   <!-- Scripts -->
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1/jquery.js"></script>
-  <script type="text/javascript"
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCnGaWqD_3GJmIj-r1DYeneHDefa-S5NqU"></script>
   <script type="text/javascript" src="js/plugins/jquery.mousewheel-3.0.6.pack.js"></script>
   <script type="text/javascript" src="js/plugins/imagesloaded.pkgd.min.js"></script>
   <script type="text/javascript" src="js/plugins/isotope.pkgd.min.js"></script>
