fix: added lazysizes module

--- a/index.html
+++ b/index.html
@@ -106,9 +106,9 @@
       <aside class="widget widget-profile">
         <div class="profile-photo">
           <picture>
-            <source srcset="img_webp/uploads/logo-zenoo-wide.webp" type="image/webp">
-            <source srcset="img/uploads/logo-zenoo-wide.png" type="image/png">
-              <img src="img/uploads/logo-zenoo-wide.png" alt="Franck Demoute" />
+            <source data-srcset="img_webp/uploads/logo-zenoo-wide.webp" type="image/webp">
+            <source data-srcset="img/uploads/logo-zenoo-wide.png" type="image/png">
+              <img class="lazyload" data-src="img/uploads/logo-zenoo-wide.png" alt="Franck Demoute" />
           </picture>
         </div>
         <div class="profile-info">
@@ -168,9 +168,9 @@
             <div class="col-sm-3 col-xs-6">
               <a class="head-logo" href="">
                 <picture>
-                  <source srcset="img_webp/rs-logo.webp" type="image/webp">
-                  <source srcset="img/rs-logo.png" type="image/png">
-                    <img src="img/rs-logo.png" alt="Franck Demoute" />
+                  <source data-srcset="img_webp/rs-logo.webp" type="image/webp">
+                  <source data-srcset="img/rs-logo.png" type="image/png">
+                    <img class="lazyload" data-src="img/rs-logo.png" alt="Franck Demoute" />
                 </picture>
               </a>
             </div>
@@ -210,9 +210,9 @@
                   <div class="col-xs-5">
                     <div class="profile-photo">
                       <picture>
-                        <source srcset="img_webp/uploads/logo-zenoo-tall.webp" type="image/webp">
-                        <source srcset="img/uploads/logo-zenoo-tall.png" type="image/png">
-                        <img src="img/uploads/logo-zenoo-tall.png" alt="Franck Demoute" />
+                        <source data-srcset="img_webp/uploads/logo-zenoo-tall.webp" type="image/webp">
+                        <source data-srcset="img/uploads/logo-zenoo-tall.png" type="image/png">
+                        <img class="lazyload" data-src="img/uploads/logo-zenoo-tall.png" alt="Franck Demoute" />
                       </picture>
                     </div>
                   </div>
@@ -394,9 +394,9 @@
                 <div class="grid-box">
                   <figure class="portfolio-figure">
                     <picture>
-                      <source srcset="img_webp/uploads/portfolio/obcom-thumbnail.webp" type="image/webp">
-                      <source srcset="img/uploads/portfolio/obcom-thumbnail.jpg" type="image/jpeg">
-                      <img src="img/uploads/portfolio/obcom-thumbnail.jpg" alt="Obcom" />
+                      <source data-srcset="img_webp/uploads/portfolio/obcom-thumbnail.webp" type="image/webp">
+                      <source data-srcset="img/uploads/portfolio/obcom-thumbnail.jpg" type="image/jpeg">
+                      <img class="lazyload" data-src="img/uploads/portfolio/obcom-thumbnail.jpg" alt="Obcom" />
                     </picture>
                     <figcaption class="portfolio-caption">
                       <div class="portfolio-caption-inner">
@@ -436,9 +436,9 @@
                 <div class="grid-box">
                   <figure class="portfolio-figure">
                     <picture>
-                      <source srcset="img_webp/uploads/portfolio/sostag-thumbnail.webp" type="image/webp">
-                      <source srcset="img/uploads/portfolio/sostag-thumbnail.jpg" type="image/jpeg">
-                        <img src="img/uploads/portfolio/sostag-thumbnail.jpg" alt="Sostag" />
+                      <source data-srcset="img_webp/uploads/portfolio/sostag-thumbnail.webp" type="image/webp">
+                      <source data-srcset="img/uploads/portfolio/sostag-thumbnail.jpg" type="image/jpeg">
+                        <img class="lazyload" data-src="img/uploads/portfolio/sostag-thumbnail.jpg" alt="Sostag" />
                     </picture>
                     <figcaption class="portfolio-caption">
                       <div class="portfolio-caption-inner">
@@ -477,9 +477,9 @@
                 <div class="grid-box">
                   <figure class="portfolio-figure">
                     <picture>
-                      <source srcset="img_webp/uploads/portfolio/clos-normand-thumbnail.webp" type="image/webp">
-                      <source srcset="img/uploads/portfolio/clos-normand-thumbnail.jpg" type="image/jpeg">
-                      <img src="img/uploads/portfolio/clos-normand-thumbnail.jpg" alt="Clos Normand" />
+                      <source data-srcset="img_webp/uploads/portfolio/clos-normand-thumbnail.webp" type="image/webp">
+                      <source data-srcset="img/uploads/portfolio/clos-normand-thumbnail.jpg" type="image/jpeg">
+                      <img class="lazyload" data-src="img/uploads/portfolio/clos-normand-thumbnail.jpg" alt="Clos Normand" />
                     </picture>
                     <figcaption class="portfolio-caption">
                       <div class="portfolio-caption-inner">
@@ -676,72 +676,72 @@
             <div class="clients-carousel">
               <div class="client-logo">
                 <picture>
-                  <source srcset="img_webp/uploads/logos/AngularJS.webp" type="image/webp">
-                  <source srcset="img/uploads/logos/AngularJS.png" type="image/png">
-                  <img src="img/uploads/logos/AngularJS.png" title="AngularJS" alt="AngularJS" />
+                  <source data-srcset="img_webp/uploads/logos/AngularJS.webp" type="image/webp">
+                  <source data-srcset="img/uploads/logos/AngularJS.png" type="image/png">
+                  <img class="lazyload" data-src="img/uploads/logos/AngularJS.png" title="AngularJS" alt="AngularJS" />
                 </picture>
               </div>
               <div class="client-logo">
                 <picture>
-                  <source srcset="img_webp/uploads/logos/CSS3.webp" type="image/webp">
-                  <source srcset="img/uploads/logos/CSS3.png" type="image/png">
-                  <img src="img/uploads/logos/CSS3.png" title="CSS3" alt="CSS3" />
+                  <source data-srcset="img_webp/uploads/logos/CSS3.webp" type="image/webp">
+                  <source data-srcset="img/uploads/logos/CSS3.png" type="image/png">
+                  <img class="lazyload" data-src="img/uploads/logos/CSS3.png" title="CSS3" alt="CSS3" />
                 </picture>
               </div>
               <div class="client-logo">
                 <picture>
-                  <source srcset="img_webp/uploads/logos/HTML5.webp" type="image/webp">
-                  <source srcset="img/uploads/logos/HTML5.png" type="image/png">
-                  <img src="img/uploads/logos/HTML5.png" title="HTML5" alt="HTML5" />
+                  <source data-srcset="img_webp/uploads/logos/HTML5.webp" type="image/webp">
+                  <source data-srcset="img/uploads/logos/HTML5.png" type="image/png">
+                  <img class="lazyload" data-src="img/uploads/logos/HTML5.png" title="HTML5" alt="HTML5" />
                 </picture>
               </div>
               <div class="client-logo">
                 <picture>
-                  <source srcset="img_webp/uploads/logos/Javascript.webp" type="image/webp">
-                  <source srcset="img/uploads/logos/Javascript.png" type="image/png">
-                  <img src="img/uploads/logos/Javascript.png" title="Javascript" alt="Javascript" />
+                  <source data-srcset="img_webp/uploads/logos/Javascript.webp" type="image/webp">
+                  <source data-srcset="img/uploads/logos/Javascript.png" type="image/png">
+                  <img class="lazyload" data-src="img/uploads/logos/Javascript.png" title="Javascript" alt="Javascript" />
                 </picture>
               </div>
               <div class="client-logo">
                 <picture>
-                  <source srcset="img_webp/uploads/logos/Java.webp" type="image/webp">
-                  <source srcset="img/uploads/logos/Java.png" type="image/png">
-                  <img src="img/uploads/logos/Java.png" title="Java" alt="Java" />
+                  <source data-srcset="img_webp/uploads/logos/Java.webp" type="image/webp">
+                  <source data-srcset="img/uploads/logos/Java.png" type="image/png">
+                  <img class="lazyload" data-src="img/uploads/logos/Java.png" title="Java" alt="Java" />
                 </picture>
               </div>
               <div class="client-logo">
                 <picture>
-                  <source srcset="img_webp/uploads/logos/jQuery.webp" type="image/webp">
-                  <source srcset="img/uploads/logos/jQuery.png" type="image/png">
-                  <img src="img/uploads/logos/jQuery.png" title="jQuery" alt="jQuery" />
+                  <source data-srcset="img_webp/uploads/logos/jQuery.webp" type="image/webp">
+                  <source data-srcset="img/uploads/logos/jQuery.png" type="image/png">
+                  <img class="lazyload" data-src="img/uploads/logos/jQuery.png" title="jQuery" alt="jQuery" />
                 </picture>
               </div>
               <div class="client-logo">
                 <picture>
-                  <source srcset="img_webp/uploads/logos/NodeJS.webp" type="image/webp">
-                  <source srcset="img/uploads/logos/NodeJS.png" type="image/png">
-                  <img src="img/uploads/logos/NodeJS.png" title="NodeJS" alt="NodeJS" />
+                  <source data-srcset="img_webp/uploads/logos/NodeJS.webp" type="image/webp">
+                  <source data-srcset="img/uploads/logos/NodeJS.png" type="image/png">
+                  <img class="lazyload" data-src="img/uploads/logos/NodeJS.png" title="NodeJS" alt="NodeJS" />
                 </picture>
               </div>
               <div class="client-logo">
                 <picture>
-                  <source srcset="img_webp/uploads/logos/Prestashop.webp" type="image/webp">
-                  <source srcset="img/uploads/logos/Prestashop.png" type="image/png">
-                  <img src="img/uploads/logos/Prestashop.png" title="Prestashop" alt="Prestashop" />
+                  <source data-srcset="img_webp/uploads/logos/Prestashop.webp" type="image/webp">
+                  <source data-srcset="img/uploads/logos/Prestashop.png" type="image/png">
+                  <img class="lazyload" data-src="img/uploads/logos/Prestashop.png" title="Prestashop" alt="Prestashop" />
                 </picture>
               </div>
               <div class="client-logo">
                 <picture>
-                  <source srcset="img_webp/uploads/logos/Scala.webp" type="image/webp">
-                  <source srcset="img/uploads/logos/Scala.png" type="image/png">
-                  <img src="img/uploads/logos/Scala.png" title="Scala" alt="Scala" />
+                  <source data-srcset="img_webp/uploads/logos/Scala.webp" type="image/webp">
+                  <source data-srcset="img/uploads/logos/Scala.png" type="image/png">
+                  <img class="lazyload" data-src="img/uploads/logos/Scala.png" title="Scala" alt="Scala" />
                 </picture>
               </div>
               <div class="client-logo">
                 <picture>
-                  <source srcset="img_webp/uploads/logos/Wordpress.webp" type="image/webp">
-                  <source srcset="img/uploads/logos/Wordpress.png" type="image/png">
-                  <img src="img/uploads/logos/Wordpress.png" title="Wordpress" alt="Wordpress" />
+                  <source data-srcset="img_webp/uploads/logos/Wordpress.webp" type="image/webp">
+                  <source data-srcset="img/uploads/logos/Wordpress.png" type="image/png">
+                  <img class="lazyload" data-src="img/uploads/logos/Wordpress.png" title="Wordpress" alt="Wordpress" />
                 </picture>
               </div>
             </div>
@@ -881,19 +881,20 @@
   </div>
 
   <!-- Scripts -->
-  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1/jquery.js"></script>
-  <script type="text/javascript" src="js/plugins/jquery.mousewheel-3.0.6.pack.js"></script>
-  <script type="text/javascript" src="js/plugins/imagesloaded.pkgd.min.js"></script>
-  <script type="text/javascript" src="js/plugins/isotope.pkgd.min.js"></script>
-  <script type="text/javascript" src="js/plugins/jquery.appear.min.js"></script>
-  <script type="text/javascript" src="js/plugins/jquery.onepagenav.min.js"></script>
-  <script type="text/javascript" src="js/plugins/jquery.bxslider/jquery.bxslider.min.js"></script>
-  <script type="text/javascript" src="js/plugins/jquery.customscroll/jquery.mCustomScrollbar.concat.min.js"></script>
-  <script type="text/javascript" src="js/plugins/jquery.fancybox/jquery.fancybox.pack.js"></script>
-  <script type="text/javascript" src="js/plugins/jquery.fancybox/helpers/jquery.fancybox-media.js"></script>
-  <script type="text/javascript" src="js/plugins/jquery.owlcarousel/owl.carousel.min.js"></script>
-  <script type="text/javascript" src="js/options.js"></script>
-  <script type="text/javascript" src="js/site.js"></script>
+  <script src="js/plugins/lazysizes.min.js" async></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1/jquery.js"></script>
+  <script src="js/plugins/jquery.mousewheel-3.0.6.pack.js"></script>
+  <script src="js/plugins/imagesloaded.pkgd.min.js"></script>
+  <script src="js/plugins/isotope.pkgd.min.js"></script>
+  <script src="js/plugins/jquery.appear.min.js"></script>
+  <script src="js/plugins/jquery.onepagenav.min.js"></script>
+  <script src="js/plugins/jquery.bxslider/jquery.bxslider.min.js"></script>
+  <script src="js/plugins/jquery.customscroll/jquery.mCustomScrollbar.concat.min.js"></script>
+  <script src="js/plugins/jquery.fancybox/jquery.fancybox.pack.js"></script>
+  <script src="js/plugins/jquery.fancybox/helpers/jquery.fancybox-media.js"></script>
+  <script src="js/plugins/jquery.owlcarousel/owl.carousel.min.js"></script>
+  <script src="js/options.js"></script>
+  <script src="js/site.js"></script>
 </body>
 
 </html>
