--- a/index.html
+++ b/index.html
@@ -840,7 +840,7 @@
                   <div id="map" data-latitude="46.149276" data-longitude="-1.155681">
                     <iframe
                       frameborder="0" style="border:0"
-                      src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCnGaWqD_3GJmIj-r1DYeneHDefa-S5NqU&q=la+rochelle&center=46.149276,-1.155681&zoom=6">
+                      data-src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCnGaWqD_3GJmIj-r1DYeneHDefa-S5NqU&q=la+rochelle&center=46.149276,-1.155681&zoom=6">
                     </iframe>
                   </div>
                 </div>
