--- a/index.html
+++ b/index.html
@@ -837,7 +837,7 @@
                     </li>
                   </ul>
 
-                  <div id="map" data-latitude="46.149276" data-longitude="-1.155681">
+                  <div id="map">
                     <iframe
                       frameborder="0" style="border:0"
                       data-src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCnGaWqD_3GJmIj-r1DYeneHDefa-S5NqU&q=la+rochelle&center=46.149276,-1.155681&zoom=6">
