fix: Removed unused JS

--- a/index.html
+++ b/index.html
@@ -892,7 +892,7 @@
   <script src="js/plugins/jquery.bxslider/jquery.bxslider.min.js"></script>
   <script src="js/plugins/jquery.customscroll/jquery.mCustomScrollbar.concat.min.js"></script>
   <script src="js/plugins/jquery.fancybox/jquery.fancybox.pack.js"></script>
-  <script src="js/plugins/jquery.fancybox/helpers/jquery.fancybox-media.js"></script>
+  <script src="js/plugins/jquery.fancybox/helpers/jquery.fancybox-media.min.js"></script>
   <script src="js/plugins/jquery.owlcarousel/owl.carousel.min.js"></script>
   <script src="js/options.js"></script>
   <script src="js/site.js"></script>
